Added PlaceholderAPI support

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,7 +13,8 @@ message:
   - ''
   - '&6----------------------------------------------------------------'
   - ''
-show-hover: true
-hover-color: YELLOW
-show-on-join: true
-first-join-only: false
+show-hover: true # Enables a hover message that shows what will happen when clicked
+hover-color: YELLOW # The colour of the hover message
+refresh-on-send: false # This will refresh the message everytime its send, useful for dynamic ppapi placeholders
+show-on-join: true # Shows the message on join
+first-join-only: false # Only show on the first join
